feat: Add Google Calendar sync, configure therapist schedule, fix slot availability
- Implement automatic Google Calendar synchronization (OAuth 2.0)
- Configure Dipl. Arzt Antoine Theurillat schedule (Mo-Fr, 09:00-17:00)
- Fix time slot availability logic to prevent double-booking
- Add Profile page Google Calendar connection UI
- Fix CSS import order issue in index.css
- Add comprehensive setup documentation

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.10.5",
+    "googleapis": "^161.0.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next": "^15.3.2",
