fix: bug fixes and UX polish
Meta & Branding:
- Updated OG tags to German (psychcentral.app)
- Updated Twitter card metadata
- Updated PWA manifest with psychcentral.app start_url
- Created proper PWA icons (192x192, 512x512)

UX Improvements:
- Hide empty appointment notes on confirmation page
- Enhanced empty state messages on appointments page
- Reduced animation durations (0.8s→0.3s) for consistency
- Improved focus states for accessibility (purple outline)

Performance:
- Updated browserslist database (caniuse-lite)
- No more build warnings

All animations now consistent with Phase 4 mobile optimizations

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "PsychCentral Terminverwaltung",
   "short_name": "PsychCentral",
   "description": "Terminverwaltung für Ihre Therapie bei Dipl. Arzt Antoine Theurillat",
-  "start_url": "/",
+  "start_url": "https://psychcentral.app/",
   "scope": "/",
   "display": "standalone",
   "orientation": "portrait-primary",
@@ -10,9 +10,15 @@
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "/icon-192.svg",
+      "src": "/icon-192.png",
       "sizes": "192x192",
-      "type": "image/svg+xml",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
